# minus

./: .ctagsignore  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  GEMINI.md  LICENSE.txt  README.md  chicago.h  chicago.hxx  chicago14a-default.hxx  chicago14a.h  chicago14a.hxx  chicago6a-default.hxx  chicago6a.hxx  comps.cxx  comps.h  comps.hxx  dag.sce  ignoreme.txt  minus.cxx  minus.h  minus.hxx
.github/workflows/: compile_and_run_test.yml
Eigen/: LU
Eigen/src/Core/arch/AVX/: Complex.h
Eigen/src/LU/: PartialPivLU.h
M2/: HxH.c  HxHt.c  chicago.m2  common.m2  evaluators.m2  inverse.m2  startSys
Templates/: minus-chicago-alltypes-allformulations+double.cxx  minus-chicago17+double.cxx
algo/: CMakeLists.txt  expminus.h  expminus.hxx  numiteration.m  testevazio.txt
algo/Templates/: expminus-chicago-alltypes-allformulations+double.cxx
algo/cmd/: CMakeLists.txt  expminus-chicago  expminus-chicago.cxx
algo/cmd/old/: expminus-iterative.cxx  expminus.h
algo/expminus/: expminus.h  expminus.hxx
algo/juliana/: teste.txt
algo/tests/: CMakeLists.txt  test_driver.cxx  test_expminus.cxx  test_include.cxx  test_linear.cxx
algo/tests/Templates/: vnl_vector_fixed+complex_double.allsizes_minus-.cxx
cmd/: CMakeLists.txt  P01-chicago-5lines-spherical-case1  cmd-util.h  cmd-util.hxx  expminus-chicago.cxx  minus-2v5p.cxx  minus-chicago-raw.cxx  minus-chicago.cxx  minus-chicago.h  minus-cleveland-raw.cxx  minus-cleveland.cxx  minus-linecircle.cxx  minus-linecircle.h
config/cmake/Modules/: COMPSStandardOptions.cmake  MINUSStandardOptions.cmake
config/cmake/export/: COMPSCreateProject.cmake  MINUSCreateProject.cmake
doc/equations/: chicago-14a.jl  chicago14a-eqs.txt
julia/: chicago-14a.jl  chicago-original.jl
minus/: 2v5p-default.h  2v5p9a-default-data.h  2v5p9a-default-data.hxx  2v5p9a-io.h  2v5p9a.h  2v5p9a.hxx  CMakeLists.txt  HxH-doc.md  Hxt-doc.md  chicago-default.h  chicago14a-HxH.hxx  chicago14a-Hxt.hxx  chicago14a-default-data.h  chicago14a-default-data.hxx  chicago14a-default.h  chicago14a-default.hxx  chicago14a-internals.h  chicago14a-io.h  chicago14a-lsolve.hxx  chicago14a.h  chicago14a.hxx  chicago6a-default.hxx  chicago6a.hxx  cleveland-default.h  cleveland14a-default-data.h  cleveland14a-default-data.hxx  cleveland14a-default.hxx  cleveland14a-internals.h  cleveland14a-io.h  cleveland14a.h  cleveland14a.hxx  common-14a-io.h  debug-common.h  debug-util.h  debug_common.h  debug_util.h  expminus.h  expminus.hxx  internal-util.h  internal-util.hxx  (+29 more)
minus/Eigen/: Core  LU
minus/Eigen/src/Core/: ProductEvaluators.h  SolveTriangular.h  TriangularMatrix.h
minus/Eigen/src/Core/util/: Meta.c
minus/Eigen/src/LU/: PartialPivLU.h
minus/Templates/: expminus-chicago-alltypes-allformulations+double.cxx  minus-2v5p-alltypes-allformulations+double.cxx  minus-chicago-alltypes-allformulations+double.cxx  minus-cleveland-alltypes-allformulations+double.cxx  minus-linecircle-alltypes-allformulations+double.cxx  minus_io_common+double.cxx  minus_util+double.cxx
minus/cleveland/: cleveland-default.h  cleveland14a-default-data.h  cleveland14a.h
other/: note
scripts/: 100-configurations-synthdata  eval_monodromy_demo.m2  get-flags  getlines.sh  lu.sci  minus-chicago-synth  minus-count-align  minus-disassemble  parse-m2string.vim  parse-m2string2.vim  rc.sci  rids.m  synthdata  synthdata-batch  synthdata-scan  synthdata-scan-postprocess  synthdata.sh  synthdata_batch.sh  t  test_triple_intersections.m
scripts/dag/: chicago_Hxt.sce  chicago_bare.sce  d.sce  dag.sce  dag_incl.sce  dag_input.sce  direct_expression.sce  extract_tree.sce  get_pedag.sce  partial_expr.c  t_dep  tsort.sce  tsort_ini.sce  tsort_queue.sce  vectorize.sce
scripts/dag/figs/old/: chicago.dot  evalgraph-5-all.dot
scripts/dag/in/HxH/: HxH  chicago_HxH.sce  chicago_y.sce  gates  xt-dep  xt-dep-uniq
scripts/dag/in/Hxt/: chicago_Hxt.sce  gates
scripts/plots/: best  findbest  iter.m
scripts/synthdata/: 100-configurations-synthdata.sh  getlines-openmvg  microbench  microbench-found  minus-chicago-synth  minus-linecircle-test  synthdata  synthdata-batch-old  tiny-configurations-synthdata
tests/: CMakeLists.txt  debug_common.h  debug_util.h  expminus-chicago.cxx  expminus-mkl.cxx  expminus.cxx  expminus.h  mes  notes.cxx  sols-from-m2-for-testing.h  sols-from-minus-firstrun.h  test-common.h  test-driver.cxx  test-internals-2v5p.cxx  test-internals-cleveland.cxx  test-internals.cxx  test-minus-chicago  test-minus-cleveland.cxx  test-minus.cxx  test_common.h  test_comps.cxx  test_driver.cxx  test_expminus.cxx  test_include.cxx  test_internals.cxx  test_internals_cleveland.cxx  test_linear.cxx  test_minus.cxx  test_minus_cleveland.cxx  test_minus_new.cxx
tests/Templates/: vnl_matrix_fixed+complex_double.allsizes_comps-.cxx
tests/benchmark/: FRePTcorrigido.txt  GEMINI.md
tests/benchmark/chicago-benchmark/: script-gammaotimo.sh
tests/benchmark/chicago-inputs/: FRePTcorrigido.txt
tests/benchmark/linecircle-benchmark/: script-linecircle0novo.sh
tests/benchmark/linecircle-ground-truth/: Pts_linecircleNovo.txt
tests/benchmark/linecircle-inputs/: CirLiNovo.txt
tutorial/: MinusUtility.m2  MiusUtility.m2  README.md  TODO.md  end-2x2.m2  end-linecircle.m2  equations-2x2.m2  equations-linecircle.m2  ex-run.m2  ex-start.m2  start-2x2.m2  start-linecircle.m2  startSys
tutorial/linecircle/: end-linecircle.m2  equations-linecircle.m2  linecircle2a-startSys  start-linecircle.m2
tutorial/linepoint/: MinusUtility.m2  README.md  end-linepoint.m2  equations-linepoint.m2  start-linepoint.m2
